@@ -7,7 +7,8 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
-* [2018-08-??] init_libTMCG(): added parameter to enforce use of secure memory
+* [2018-08-16] RFC4880: added types and functions for use of secure memory
+* [2018-08-16] init_libTMCG(): added parameter to enforce use of secure memory
 * [2018-08-15] RFC4880: added Asymmetric[De|En]cryptECDH() from RFC 6637
 * [2018-08-11] RFC4880: added support for verifying text document signatures
 * [2018-08-09] RFC4880: added Issuer Fingerprint subpacket from RFC 4880bis-04
